--- a/index.html
+++ b/index.html
@@ -1127,14 +1127,14 @@
             </p>
             <p> &emsp; `vecf(t)=f_x(t)veci+f_y(t)vecj+f_z(t)veck`</p>
             <p>
-                where `f_x(t)`, `f_y(t)`, and `f_z(t)` are the coordinate functions of the parameter t, and the domain of this vector-valued function is the intersection of the domains of the functions `f_x`, `f_y`, and `f_z`.
+                where `f_x(t)`, `f_y(t)`, and `f_z(t)` are the <strong>coordinate functions</strong> of the parameter t, and the domain of this vector-valued function is the intersection of the domains of the functions `f_x`, `f_y`, and `f_z`.
             </p>
         </section>
 
         <section>
             <h3>Derivative of a vector-valued function</h3>
             <p>
-                The derivative of a vector-valued function is nearly identical to the definition of a real-valued function of one variable. However, because the range of a vector-valued function consists of vectors, the same is true for the range of the derivative of a vector-valued function. That is:
+                The <strong>derivative of a vector-valued function</strong> is nearly identical to the definition of derivative of a real-valued function of one variable. However, because the range of a vector-valued function consists of vectors, the same is true for the range of the derivative of a vector-valued function. That is:
             </p>
             <p> &emsp; `vecf'(t) = (dvecf)/dt = (df_x)/dtveci + (df_y)/dtvecj +(df_z)/dtveck`</p>
         </section>
@@ -1153,7 +1153,9 @@
         </section>
 
         <section>
-            <h3></h3>
+            <h3>Integral of a vector-valued function</h3>
+            <p>The <strong>integral of a vector-valued function</strong> is another vector-valued function where its coordinated functions are the integrals of the initial vector-valued function. That is represented as: </p>
+            <p>&emsp; `int_0^1 f(x)dx`</p>
         </section>
 
         <aside>
