--- a/index.html
+++ b/index.html
@@ -1154,8 +1154,8 @@
 
         <section>
             <h3>Integral of a vector-valued function</h3>
-            <p>The <strong>integral of a vector-valued function</strong> is another vector-valued function where its coordinated functions are the integrals of the initial vector-valued function. That is represented as: </p>
-            <p>&emsp; `int_0^1 f(x)dx`</p>
+            <p>The <strong>integral of a vector-valued function</strong> is another vector-valued function where its coordinated functions are the integrals of the initial vector-valued function. That is, if  `vecf(t) = f_x(t)veci+f_y(t)vecj+f_z(t)veck = << f_x(t), f_y(t), f_z(t) >> `, its integral is: </p>
+            <p>&emsp; `int vecf(t)dt = int << f_x(t), f_y(t), f_z(t) >> dt = << int f_x(t)dt, int f_y(t)dt, int f_z(t)dt >> `</p>
         </section>
 
         <aside>
