--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1 id="Home" class="lang lang-es" >FÍSICA PREUNIVERSITARIA</h1>
     </header>
 
-    <nav class="lang lang-en> <!--Navigation bar. Links to the site's main sections-->
+    <nav class="lang lang-en"> <!--Navigation bar. Links to the site's main sections-->
         <ul>
             <li><a href="#Home">Home</a></li>
             <li><a href="#Vectors in Space">Vectors in Space</a></li>
@@ -44,7 +44,7 @@
         </ul>
     </nav>
 
-    <nav class="lang lang-eS> <!--Navigation bar. Links to the site's main sections-->
+    <nav class="lang lang-es"> <!--Navigation bar. Links to the site's main sections-->
         <ul>
             <li><a href="#Home">Inicio</a></li>
             <li><a href="#Vectors in Space">Vectores</a></li>
