--- a/index.html
+++ b/index.html
@@ -74,14 +74,10 @@
 
         <section>
             <h3 class="lang lang-en">Vectors</h3>
+            <h3 class="lang lang-es" lang="es">Vectores</h3>
 
             <p class="lang lang-en">
-                A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the
-                origin,
-                while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by
-                <b><i>v</i></b>,
-                <var class="vector1">v<span>&#8407;</span></var> or
-                <var class="vector2">AB<span>&#8594;</span></var>.
+                A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the origin, while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by <b><i>v</i></b>, <!--<var class="vector1">v<span>&#8407;</span></var> --> `vecv`or `vec(AB)` <!-- <var class="vector2">AB<span>&#8594;</span></var> -->.
                 A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually
                 denoted by <b><i>0</i></b>.
                 The vector
