--- a/index.html
+++ b/index.html
@@ -77,16 +77,12 @@
             <h3 class="lang lang-es" lang="es">Vectores</h3>
 
             <p class="lang lang-en">
-                A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the origin, while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by <b><i>v</i></b>, <!--<var class="vector1">v<span>&#8407;</span></var> --> `vecv`or `vec(AB)` <!-- <var class="vector2">AB<span>&#8594;</span></var> -->.
-                A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually
-                denoted by <b><i>0</i></b>.
-                The vector
-                <var class="vector2">BA<span>&#8594;</span></var>
-                is said to be the vector <strong>opposite</strong> to
-                <var class="vector2">AB<span>&#8594;</span></var>.
-                A vector with length equal to one is called a <strong>unit vector</strong>. Any direction may be
-                assigned to a zero vector.
+                A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the origin, while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by <b><i>v</i></b>, <!--<var class="vector1">v<span>&#8407;</span></var> --> `vecv`or `vec(AB)` <!-- <var class="vector2">AB<span>&#8594;</span></var> -->. A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually denoted by <b><i>0</i></b>. The vector `vecBA` is said to be the vector <strong>opposite</strong> to `vecAB`. A vector with length equal to one is called a <strong>unit vector</strong>. Any direction may be assigned to a zero vector.
             </p>
+
+			<p class="lang lang-es" lang="es">
+				Un <strong>vector </strong>
+			</p>
 
             <figure class="centered">
                 <svg viewBox="0 0 180 220" xmlns="http://www.w3.org/2000/svg" width="180" height="220">
