--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
             <h3 class="lang lang-es" lang="es">Vectores</h3>
 
             <p class="lang lang-en">
-                A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the origin, while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by <b><i>v</i></b>, <!--<var class="vector1">v<span>&#8407;</span></var> --> `vecv`or `vec(AB)` <!-- <var class="vector2">AB<span>&#8594;</span></var> -->. A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually denoted by <b><i>0</i></b>. The vector `vecBA` is said to be the vector <strong>opposite</strong> to `vecAB`. A vector with length equal to one is called a <strong>unit vector</strong>. Any direction may be assigned to a zero vector.
+                A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the origin, while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by <b><i>v</i></b>, <!--<var class="vector1">v<span>&#8407;</span></var> --> `vecv` or `vec(AB)` <!-- <var class="vector2">AB<span>&#8594;</span></var> -->. A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually denoted by `vec0`. The vector `vec(BA)` is said to be the vector <strong>opposite</strong> to `vec(AB)`. A vector with length equal to one is called a <strong>unit vector</strong>. Any direction may be assigned to a zero vector.
             </p>
 
 			<p class="lang lang-es" lang="es">
-				Un <strong>vector </strong>
+				Un <strong>vector </strong> es un segmento dirigido, uno de cuyos extremos (el punto A) se dice que es el origen, mientras que el otro (el punto B) se dice que es el final del vector. Tal vector puede ser denotado por <b><i>v</i></b>, <!--<var class="vector1">v<span>&#8407;</span></var> --> `vecv` or `vec(AB)` <!-- <var class="vector2">AB<span>&#8594;</span></var> -->. Un vector cuyo origen y fin coinciden se dice que es un <strong>vector cero</strong>, y generalmente se denota por `vec0`. El vector `vec(BA)`se dice que es el <strong>vector opuesto</strong> a `vec(AB)`. Un vector con una longitud igual a uno se denomina vector unitario. Cualquier dirección puede ser asignada a un vector cero.
 			</p>
 
             <figure class="centered">
@@ -116,27 +116,15 @@
             <p class="lang lang-en">The vector origin is also named initial point or point of application. </p>
 
             <p class="lang lang-en">
-                A geometric vector, as defined above, is also called a <strong>fixed vector</strong> or <strong>bound
-                    vector</strong>. Because it has a unique initial point.
-                In physics is used, for example, to specify the action of the force on deformable or non rigid body. In
-                this instance, the forces and
-                deformations within the body depend on the point of application of the force, as well as on the
-                magnitude and line of action.
+                A geometric vector, as defined above, is also called a <strong>fixed vector</strong> or <strong>bound vector</strong>. Because it has a unique initial point. In physics is used, for example, to specify the action of the force on deformable or non rigid body. In this instance, the forces and deformations within the body depend on the point of application of the force, as well as on the  magnitude and line of action.
             </p>
 
             <p class="lang lang-en">
-                A class of equal vectors lying on the same straight line is said to be a <strong>sliding
-                    vector</strong>.
-                An example of sliding vector is the action of a force on a rigid body. So, in this case, the point of
-                application can be moved along the line determined
-                by the vector direction.
+                A class of equal vectors lying on the same straight line is said to be a <strong>sliding vector</strong>. An example of sliding vector is the action of a force on a rigid body. So, in this case, the point of application can be moved along the line determined by the vector direction.
             </p>
 
             <p class="lang lang-en">
-                If vectors are only characterized by magnitude and direction, then are called <strong>free
-                    vectors</strong>. Examples of free vectors
-                in physics are displacement, velocity and magnetic or electric field strength. In these cases, the
-                vector can be moved to any point in the space
+                If vectors are only characterized by magnitude and direction, then are called <strong>free vectors</strong>. Examples of free vectors in physics are displacement, velocity and magnetic or electric field strength. In these cases, the vector can be moved to any point in the space
             </p>
 
             <p class="lang lang-en">
@@ -170,8 +158,7 @@
             </p>
 
             <p class="lang lang-en">
-                To find `vec(a+b)`, we first draw the vector `veca`, and from the terminal end of
-                `veca`, we draw the vector `vecb`. In other words, we have the initial point of `vecb` meet the terminal end of `veca`. This position corresponds to the notion that we move along the first vector and then, from its terminal point, we move along the second vector. Vector addition has the conmutative property; so, if we first draw vector `vecb`, and from the terminal end of `vecb`, we draw the vector `vecba`, we will obtain `vec(b+a)`, that is equal to `vec(a+b)`. 
+                To find `vec(a+b)`, we first draw the vector `veca`, and from the terminal end of `veca`, we draw the vector `vecb`. In other words, we have the initial point of `vecb` meet the terminal end of `veca`. This position corresponds to the notion that we move along the first vector and then, from its terminal point, we move along the second vector. Vector addition has the conmutative property; so, if we first draw vector `vecb`, and from the terminal end of `vecb`, we draw the vector `vecba`, we will obtain `vec(b+a)`, that is equal to `vec(a+b)`. 
             </p>
 
             <figure class="centered">
