--- a/index.html
+++ b/index.html
@@ -74,14 +74,19 @@
 
         <section>
             <h3 class="lang lang-en">Vectors</h3>
-            <h3 class="lang lang-es" lang="es">Vectores</h3>
+			<h3 class="lang lang-es" lang="es">Vectores</h3>
 
-            <p class="lang lang-en">
+			<p class="lang lang-en">
                 A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the origin, while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by <b><i>v</i></b>, <!--<var class="vector1">v<span>&#8407;</span></var> --> `vecv` or `vec(AB)` <!-- <var class="vector2">AB<span>&#8594;</span></var> -->. A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually denoted by `vec0`. The vector `vec(BA)` is said to be the vector <strong>opposite</strong> to `vec(AB)`. A vector with length equal to one is called a <strong>unit vector</strong>. Any direction may be assigned to a zero vector.
             </p>
-
 			<p class="lang lang-es" lang="es">
-				Un <strong>vector </strong> es un segmento dirigido, uno de cuyos extremos (el punto A) se dice que es el origen, mientras que el otro (el punto B) se dice que es el final del vector. Tal vector puede ser denotado por <b><i>v</i></b>, <!--<var class="vector1">v<span>&#8407;</span></var> --> `vecv` or `vec(AB)` <!-- <var class="vector2">AB<span>&#8594;</span></var> -->. Un vector cuyo origen y fin coinciden se dice que es un <strong>vector cero</strong>, y generalmente se denota por `vec0`. El vector `vec(BA)`se dice que es el <strong>vector opuesto</strong> a `vec(AB)`. Un vector con una longitud igual a uno se denomina vector unitario. Cualquier dirección puede ser asignada a un vector cero.
+				Un <strong>vector </strong> es un segmento dirigido, uno de cuyos extremos (el punto A) se dice que es el origen, mientras que el otro (el punto B) se dice que es el final del vector. Tal vector puede ser denotado por <b><i>v</i></b>, <!--<var class="vector1">v<span>&#8407;</span></var> --> `vecv` or `vec(AB)` <!-- <var class="vector2">AB<span>&#8594;</span></var> -->. Un vector cuyo origen y fin coinciden se dice que es un <strong>vector cero</strong>, y generalmente se denota por `vec0`. El vector `vec(BA)` se dice que es el <strong>vector opuesto</strong> a `vec(AB)`. Un vector con una longitud igual a uno se denomina vector unitario. Cualquier dirección puede ser asignada a un vector cero.
+			</p>
+			<p class="lang lang-en">
+				The vector origin is also named initial point or point of application. 
+			</p>
+			<p class=class="lang lang-es" lang="es">
+				El origen del vector también se denomina punto inicial o punto de aplicación. 
 			</p>
 
             <figure class="centered">
@@ -111,28 +116,36 @@
                 <figcaption class="lang lang-en">
                     <b>Figure 1.1 </b> A vector is represented by a directed line segment from its initial point A to its terminal point B.
                 </figcaption>
+		<figcaption class="lang lang-es" lang="es">
+                    <b>Figura 1.1 </b> Un vector está representado por un segmento de línea dirigida desde su punto inicial A hasta su punto terminal B.
+                </figcaption>
             </figure>
-
-            <p class="lang lang-en">The vector origin is also named initial point or point of application. </p>
 
             <p class="lang lang-en">
                 A geometric vector, as defined above, is also called a <strong>fixed vector</strong> or <strong>bound vector</strong>. Because it has a unique initial point. In physics is used, for example, to specify the action of the force on deformable or non rigid body. In this instance, the forces and deformations within the body depend on the point of application of the force, as well as on the  magnitude and line of action.
+            </p>
+			 <p class="lang lang-es" lang="es">
+                Un vector geométrico, como se ha definido anteriormente, también se denomina <strong>vector fijo</strong> o <strong>vector ligado</strong>. Porque tiene un punto de partida único. En física se utiliza, por ejemplo, para especificar la acción de la fuerza sobre un cuerpo deformable o no rígido. En este caso, las fuerzas y deformaciones dentro del cuerpo dependen del punto de aplicación de la fuerza, así como de la magnitud y la línea de acción.
             </p>
 
             <p class="lang lang-en">
                 A class of equal vectors lying on the same straight line is said to be a <strong>sliding vector</strong>. An example of sliding vector is the action of a force on a rigid body. So, in this case, the point of application can be moved along the line determined by the vector direction.
             </p>
+			<p class="lang lang-es" lang="es">
+                Se dice que una clase de vectores iguales que se encuentran en la misma línea recta es un <strong>vector deslizante</strong>. Un ejemplo de vector deslizante es la acción de una fuerza sobre un cuerpo rígido. Entonces, en este caso, el punto de aplicación se puede mover a lo largo de la línea determinada por la dirección del vector.
+            </p>
 
             <p class="lang lang-en">
                 If vectors are only characterized by magnitude and direction, then are called <strong>free vectors</strong>. Examples of free vectors in physics are displacement, velocity and magnetic or electric field strength. In these cases, the vector can be moved to any point in the space
             </p>
-
+			<p class="lang lang-es" lang="es">
+                Si los vectores solo se caracterizan por la magnitud y la dirección, entonces se denominan <strong>vectores libres</strong>. Ejemplos de vectores libres en física son el desplazamiento, la velocidad y la intensidad del campo magnético o eléctrico. En estos casos, el vector se puede mover a cualquier punto del espacio.
+            </p>
             <p class="lang lang-en">
-                Vector calculus, which is the study of operations performed on vectors, is based on free vectors, since
-                two given free vectors are
-                equivalent to a given sliding vector or a given bound vector, as long as we keep in mind the physical
-                meaning of the vector under analysis.
-                From now on, <strong>we'll talk about free vectors if not mentioned otherwise</strong>.
+				Vector calculus, which is the study of operations performed on vectors, is based on free vectors, since two given free vectors are equivalent to a given sliding vector or a given bound vector, as long as we keep in mind the physical meaning of the vector under analysis. From now on, <strong>we'll talk about free vectors if not mentioned otherwise</strong>.
+            </p>
+			<p class="lang lang-es" lang="es">
+				El cálculo vectorial, que es el estudio de las operaciones realizadas sobre vectores, se basa en vectores libres, ya que dos vectores libres dados son equivalente a un vector deslizante dado o a un vector ligado dado, siempre y cuando tengamos en cuenta el valor físico y el significado del vector analizado. A partir de ahora, <strong>hablaremos de vectores libres si no se menciona lo contrario</strong>.
             </p>
 
             <p class="lang lang-en">
