--- a/index.html
+++ b/index.html
@@ -152,9 +152,7 @@
                 A vector is characterized:
             <ul>
                 <li>
-                    by its <strong>magnitude</strong> (or length), which is equal to the length of the segment <SPAN
-                        class="segment">AB</SPAN>
-                    and is denoted by `norm(vecv)`,
+                    by its <strong>magnitude</strong> (or length), which is equal to the length of the segment `bar(AB)` and is denoted by `norm(vecv)`,
                 </li>
                 <li>
                     and by its <strong>direction</strong>: from A to B.
