--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<p class="lang lang-en">
 				The vector origin is also named initial point or point of application. 
 			</p>
-			<p class=class="lang lang-es" lang="es">
+			<p class="lang lang-es" lang="es">
 				El origen del vector también se denomina punto inicial o punto de aplicación. 
 			</p>
 
@@ -148,16 +148,16 @@
 				El cálculo vectorial, que es el estudio de las operaciones realizadas sobre vectores, se basa en vectores libres, ya que dos vectores libres dados son equivalente a un vector deslizante dado o a un vector ligado dado, siempre y cuando tengamos en cuenta el valor físico y el significado del vector analizado. A partir de ahora, <strong>hablaremos de vectores libres si no se menciona lo contrario</strong>.
             </p>
 
-            <p class="lang lang-en">
+        	<p class="lang lang-en">
                 A vector is characterized:
-            <ul>
-                <li>
-                    by its <strong>magnitude</strong> (or length), which is equal to the length of the segment `bar(AB)` and is denoted by `norm(vecv)`,
-                </li>
-                <li>
-                    and by its <strong>direction</strong>: from A to B.
-                </li>
-            </ul>
+            	<ul class="lang lang-en">
+                	<li>
+                    	by its <strong>magnitude</strong> (or length), which is equal to the length of the segment `bar(AB)` and is denoted by `norm(vecv)`,
+                	</li>
+                	<li>
+                    	and by its <strong>direction</strong>: from A to B.
+                	</li>
+           	 	</ul>
             </p>
         </section>
         
