--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <figcaption class="lang lang-en">
                     <b>Figure 1.1 </b> A vector is represented by a directed line segment from its initial point A to its terminal point B.
                 </figcaption>
-		<figcaption class="lang lang-es" lang="es">
+				<figcaption class="lang lang-es" lang="es">
                     <b>Figura 1.1 </b> Un vector está representado por un segmento de línea dirigida desde su punto inicial A hasta su punto terminal B.
                 </figcaption>
             </figure>
@@ -159,17 +159,35 @@
                 	</li>
            	 	</ul>
             </p>
+			<p class="lang lang-es" lang="es">
+                Un vector está caracterizado:
+            	<ul class="lang lang-es" lang="es">
+                	<li>
+                    	por su magnitud (o longitud), que es igual a la longitud del segmento `bar(AB)` y se denota por `norm(vecv)`, 
+                	</li>
+                	<li>
+                    	y por su <strong>dirección</strong>: de A hacia B.
+                	</li>
+           	 	</ul>
+            </p>
         </section>
         
         <section>
             <h3 class="lang lang-en">Vector Addition, Graphical Method:</h3>
+			<h3 class="lang lang-es" lang="es">Suma de Vectores, Método Gráfico:</h3>
 
             <p class="lang lang-en">
                 The sum of two vectors `veca` and `vecb`, or vector addition, produces a third vector `vec(a+b)`.
             </p>
+			<p class="lang lang-es" lang="es">
+                La suma de dos vectores `veca` y `vecb`, o suma de vectores, produce un tercer vector `vec(a+b)`. 
+            </p>
 
             <p class="lang lang-en">
                 To find `vec(a+b)`, we first draw the vector `veca`, and from the terminal end of `veca`, we draw the vector `vecb`. In other words, we have the initial point of `vecb` meet the terminal end of `veca`. This position corresponds to the notion that we move along the first vector and then, from its terminal point, we move along the second vector. Vector addition has the conmutative property; so, if we first draw vector `vecb`, and from the terminal end of `vecb`, we draw the vector `vecba`, we will obtain `vec(b+a)`, that is equal to `vec(a+b)`. 
+            </p>
+			 <p class="lang lang-es" lang="es">
+                Para encontrar `vec(a+b)`, primero dibujamos el vector `veca`, y desde el final de `veca`, dibujamos `vecb`. En otras palabras, hacemos qeu el origen de `vecb` coincida con el final `veca`. Esta posición corresponde a la noción de que nos movemos a lo largo del primer vector y luego, desde su punto terminal, nos movemos a lo largo del segundo vector. La suma vectorial tiene la propiedad conmutativa; Entonces, si primero dibujamos un vector `vecb`, y desde el final de `vecb`, dibujamos el vector `vecba`, obtendremos `vec(b+a)`, que es igual a `vec(a+b)`. 
             </p>
 
             <figure class="centered">
@@ -242,11 +260,14 @@
                   </svg > 
 
                 <figcaption class="lang lang-en"><b>Figure 1.2</b> Vector addition. Graphical method.</figcaption>
+				<figcaption class="lang lang-es" lang="es"><b>Figura 1.2</b> Suma de vectores. Método Gráfico.</figcaption>
             </figure>
 
             <p class="lang lang-en">
-                A <strong>scalar</strong> is a quantity that has magnitude but no direction. Or, in other words, a
-                quantity that can be expressed by one (real) number.
+                A <strong>scalar</strong> is a quantity that has magnitude but no direction. Or, in other words, a quantity that can be expressed by one (real) number.
+            </p>
+			<p class="lang lang-es" lang="es">
+                Un <strong>escalar</strong> es una cantidad que tiene magnitud pero no dirección. O, en otras palabras, un cantidad que se puede expresar con un número (real).
             </p>
         </section>
 
