--- a/index.html
+++ b/index.html
@@ -1470,12 +1470,12 @@
             <p class="lang lang-es" lang="es">
                 Then,
             </p>
-            <p class="centered">
-                <b><i>v<sub>r</sub></i></b> = (9 Km / h, 0),
+            <p>
+                &emsp; `vecv_r = << 9 (Km)/h, 0 (Km)/h >> `,
             </p>
 
-            <p class="centered">
-                <b><i>v</i></b> = (v<sub>x</sub> , v<sub>y</sub>),
+            <p>
+                &emsp; `vec v = << v_x , v_y >> `,
             </p>
 
             <p class="lang lang-en">
@@ -1484,62 +1484,66 @@
             <p class="lang lang-es" lang="es">
                 and the velocity of the boat wil be
             </p>
-            <p class="centered">
-                <b><i>v</i></b> + <b><i>v<sub>r</sub></i></b> = (9 + v<sub>x</sub>, v<sub>y</sub>).
+            <p>
+                &emsp; `vecv + vecv_r = << 9 + v_x (Km)/h, v_y (Km)/h >> `.
             </p>
 
             <p class="lang lang-en">
-                So
+                So, to stay perpendicular to the river
             </p>
             <p class="lang lang-es" lang="es">
-                So
+                So, to stay perpendicular to the river
             </p>
-            <p class="centered">
-                9 + v<sub>x</sub> = 0 (to stay perpendicular to the river)
+            <p >
+                &emsp; `9 + v_x = 0 => v_x = -9 (km)/h`
             </p>
 
             <p class="lang lang-en">
                 and
             </p>
             <p class="lang lang-es" lang="es">
-                and
+                y
             </p>
-            <p class="centered">
-                v<sub>y</sub> = 36 km / h,
+            <p>
+                &emsp; `v_y = 36 (km)/h`,
             </p>
 
-            <p class="centered">
-                <b><i>v</i></b> = (-9 Km / h , 36 Km / h)
+            <p>
+                &emsp; `vecv = << -9 (Km)/h, 36 (Km)/h >>`
+            </p>
+
+            <p class="lang lang-en">
+                The magnitude of the vector `vec v` is the speed at wich the boat is propelled and it is
+                expresed as `norm(vecv)`.
+            </p>
+            <p class="lang lang-es" lang="es">
+                La magnitud del vector `vec v` es la velocidad a la se impulsa el barco. Y se expresa como `norm(vecv)`.
+            </p>
+            <p>
+                &emsp; `norm(vecv) = sqrt(v_x^2+v_y^2) = sqrt(9^2 + 36^2) = sqrt(81+1296) = sqrt(1377) = 37.11 (km)/h.`
             </p>
 
             <p class="lang lang-en">
-                The magnitude of the vector <b><i>v</i></b> is the speed at wich the boat is propelled and it is
-                expresed as |<b><i>v</i></b>|.
+                The value of the angle &phi; is the direction in wich the boat is propeled. <br />
             </p>
             <p class="lang lang-es" lang="es">
-                The magnitude of the vector <b><i>v</i></b> is the speed at wich the boat is propelled and it is
-                expresed as |<b><i>v</i></b>|.
+                The value of the angle &phi; is the direction in wich the boat is propeled. <br />
             </p>
-            <div class="centered" class="eq-c">
-                |<b><i>v</i></b>| =
-                <span class="radical">&radic;</span><span class="radicand">v<sub>x</sub><sup>2</sup> +
-                    v<sub>y</sub><sup>2</sup></span>
-                = <span class="radical">&radic;</span><span class="radicand">81+1296</span>
-                = <span class="radical">&radic;</span><span class="radicand">1377</span>
-                = 37.11 Km/h.
-            </div>
-
+            <p>
+                &emsp; &phi; `= arctan(v_y/v_x) = arctan(36/-9) =` -76º
+            </p>
             <p class="lang lang-en">
-                The value of the angle &alpha; is the direction in wich the boat is propeled. <br />
+                this is the angle span betwen `vecv_x` and `vecv`.  <br />
             </p>
             <p class="lang lang-es" lang="es">
-                The value of the angle &alpha; is the direction in wich the boat is propeled. <br />
+                Este es el ángulo que va de `vecv_x` a `vecv`.  <br />
             </p>
+
             <!--
             Code to insert a mathematical expressions using Mathjax and MathML:
             Step 1: write the mathematical expression using a MathML editor, save it as MathML and then copy the MathML code.
             Step 2: paste the MathML code between the <math> </math> tags; where <math display="block"> represents displayed mathematics and <math display="inline"> or just <math> represents in-line mathematics.
-            -->
+            
             <math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
                 <semantics>
                     <mrow>
@@ -1595,7 +1599,7 @@
                     <annotation encoding="StarMath 5.0">%alpha = arctan( { v_{y} } over {v_{x}} ) = arctan( {36} over
                         {-9} ) = -76^{O} </annotation>
                 </semantics>
-            </math>
+            </math> -->
 
             <p class="lang lang-en">
                 Here is important to consider that:
@@ -1666,7 +1670,9 @@
                 An object moves in such a way that its velocity at a certain instant is 120 m/s and forms an angle of 30º with the horizontal. Find the horizontal and vertical components of the velocity. Express the velocity vector as a function of its components.
             </p>
             <p class="lang lang-en">
-                The formulas to calculate the components of a vector <b><i>v</i></b> given its magnitude r and direction &theta; are: <br />
+                The formulas to calculate the components of a vector <b><i>v</i></b> given its magnitude r and direction &theta; are:
+            </p>
+            <p> 
                 <b><i>v</i></b><sub>x</sub> = r&middot;cos&theta; <br />
                 <b><i>v</i></b><sub>y</sub> = r&middot;sen&theta; <br />
                 <b><i>v</i></b> = <b><i>v</i></b><sub>x</sub> + <b><i>v</i></b><sub>y</sub> <br />
@@ -1710,7 +1716,7 @@
             </p>
             <aside>
                 <h4 class="lang lang-en">References</h4>
-                <h4 class="lang lang-en">References</h4>
+                <h4 class="lang lang-es" lang="es">References</h4>
                 <ul>
                     <li>
                         <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" target="_blank">
@@ -1736,136 +1742,38 @@
 
         <section> <!--Problem 3-->
             <h3 class="lang lang-en">Exercise 3</h3>
+            <h3 class="lang lang-en">Exercise 3</h3>
             <p class="lang lang-en">
-                Find the scalar product of the vectors 5<b><i>i</i></b> - 3<b><i>j</i></b> + 2<b><i>k</i></b>,
-                -2<b><i>i</i></b> + <b><i>j</i></b> + 3<b><i>k</i></b> and the angle they form
+                Find the scalar product of the vectors `5veci - 3vecj + 2veck`, `-2veci + vecj + 3veck` and the angle they form
             </p>
             <p class="lang lang-en">
-                The scalar product of two vectors <b><i>a</i></b> and <b><i>b</i></b>, given their components is <br />
-                <b><i>a</i></b> &middot; <b><i>b</i></b> = a<sub>x</sub>&middot;b<sub>x</sub> +
-                a<sub>y</sub>&middot;b<sub>y</sub> + a<sub>z</sub>&middot;b<sub>z</sub> <br />
-                To find the angle between the two vectors (&phi;), use the formula below.<br />
-                <!--
-                code to insert a mathematical expressions using Mathjax and MathML:
-                Step 1: write the mathematical expression using a MathML editor, save it as MathML and then copy the MathML code.
-                Step 2: paste the MathML code between the <math> </math> tags; where <math display="block"> represents displayed mathematics and <math display="inline"> or
-                just <math> represents in-line mathematics.
-                -->
-                <math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
-                    <semantics>
-                        <mrow>
-                            <mi>cos</mi>
-                            <mrow>
-                                <mrow>
-                                    <mo fence="true" form="prefix" stretchy="false">(</mo>
-                                    <mrow>
-                                        <mi>ϕ</mi>
-                                    </mrow>
-                                    <mo fence="true" form="postfix" stretchy="false">)</mo>
-                                </mrow>
-                                <mo stretchy="false">=</mo>
-                                <mfrac>
-                                    <mrow>
-                                        <mstyle mathvariant="bold-italic">
-                                            <mi>a</mi>
-                                        </mstyle>
-                                        <mo stretchy="false">⋅</mo>
-                                        <mstyle mathvariant="bold-italic">
-                                            <mi>b</mi>
-                                        </mstyle>
-                                    </mrow>
-                                    <mrow>
-                                        <mrow>
-                                            <mo fence="true" form="prefix" stretchy="true">|</mo>
-                                            <mrow>
-                                                <mstyle mathvariant="bold-italic">
-                                                    <mi>a</mi>
-                                                </mstyle>
-                                            </mrow>
-                                            <mo fence="true" form="postfix" stretchy="true">|</mo>
-                                        </mrow>
-                                        <mo stretchy="false">⋅</mo>
-                                        <mrow>
-                                            <mo fence="true" form="prefix" stretchy="true">|</mo>
-                                            <mrow>
-                                                <mstyle mathvariant="bold-italic">
-                                                    <mi>b</mi>
-                                                </mstyle>
-                                            </mrow>
-                                            <mo fence="true" form="postfix" stretchy="true">|</mo>
-                                        </mrow>
-                                    </mrow>
-                                </mfrac>
-                                <mo stretchy="false">=</mo>
-                                <mfrac>
-                                    <mrow>
-                                        <mrow>
-                                            <msub>
-                                                <mi>a</mi>
-                                                <mi>x</mi>
-                                            </msub>
-                                            <mo stretchy="false">⋅</mo>
-                                            <msub>
-                                                <mi>b</mi>
-                                                <mi>x</mi>
-                                            </msub>
-                                        </mrow>
-                                        <mo stretchy="false">+</mo>
-                                        <mrow>
-                                            <msub>
-                                                <mi>a</mi>
-                                                <mi>y</mi>
-                                            </msub>
-                                            <mo stretchy="false">⋅</mo>
-                                            <msub>
-                                                <mi>b</mi>
-                                                <mi>y</mi>
-                                            </msub>
-                                        </mrow>
-                                        <mo stretchy="false">+</mo>
-                                        <mrow>
-                                            <msub>
-                                                <mi>a</mi>
-                                                <mi>z</mi>
-                                            </msub>
-                                            <mo stretchy="false">⋅</mo>
-                                            <msub>
-                                                <mi>b</mi>
-                                                <mi>z</mi>
-                                            </msub>
-                                        </mrow>
-                                    </mrow>
-                                    <mrow>
-                                        <mrow>
-                                            <mo fence="true" form="prefix" stretchy="true">|</mo>
-                                            <mrow>
-                                                <mstyle mathvariant="bold-italic">
-                                                    <mi>a</mi>
-                                                </mstyle>
-                                            </mrow>
-                                            <mo fence="true" form="postfix" stretchy="true">|</mo>
-                                        </mrow>
-                                        <mo stretchy="false">⋅</mo>
-                                        <mrow>
-                                            <mo fence="true" form="prefix" stretchy="true">|</mo>
-                                            <mrow>
-                                                <mstyle mathvariant="bold-italic">
-                                                    <mi>b</mi>
-                                                </mstyle>
-                                            </mrow>
-                                            <mo fence="true" form="postfix" stretchy="true">|</mo>
-                                        </mrow>
-                                    </mrow>
-                                </mfrac>
-                            </mrow>
-                        </mrow>
-                        <annotation encoding="StarMath 5.0"> cos( %phi) = frac {bold ital a cdot bold ital b} {abs{ bold
-                            ital a } cdot abs{bold ital b}} = { a_{x} cdot b_{x} + a_{y} cdot b_{y} +a_{z} cdot b_{z} }
-                            over { abs{ bold ital a } cdot abs{bold ital b} } </annotation>
-                    </semantics>
-                </math>
-                <br />
-                So, (5<b><i>i</i></b> - 3<b><i>j</i></b> + 2<b><i>k</i></b>)&middot;(-2<b><i>i</i></b> + <b><i>j</i></b>
+                Find the scalar product of the vectors `5veci - 3vecj + 2veck`, `-2veci + vecj + 3veck` and the angle they form
+            </p>
+            <p class="lang lang-en">
+                The scalar product of two vectors `vecv` and `vecw`, given their components is
+            </p>
+            <p class="lang lang-en">
+                The scalar product of two vectors `vecv` and `vecw`, given their components is
+            </p>
+            <p>
+                `vecv*vecw = x_1*x_2 + y_1*y_2 + z_1*z_2`
+            </p>
+            <p class="lang lang-en">
+                To find the angle between the two vectors, `theta`, use the formula below.<br />
+            </p>
+            <p class="lang lang-en">
+                To find the angle between the two vectors, `theta`, use the formula below.<br />
+            </p>
+            <p>
+                &emsp; `costheta  = (vecv*vecw)/(norm(vecv)*norm(vecw))`
+            </p>
+            <p class="lang lang-en">  
+                Then,
+            </p>
+            <p class="lang lang-en">  
+                Then,
+            </p>
+            <p> (5<b><i>i</i></b> - 3<b><i>j</i></b> + 2<b><i>k</i></b>)&middot;(-2<b><i>i</i></b> + <b><i>j</i></b>
                 + 3<b><i>k</i></b>) = 5&middot;(-2) + (-3)&middot;1 + 2&middot;3 =
                 (-10) + (-3) + 6 = -7
                 <br />
