--- a/index.html
+++ b/index.html
@@ -970,13 +970,13 @@
         </section>
 
         <section>
-            <h3 class="lang lang-en">Moment of a Sliding Vector About a Point</h3>
-            <h3 class="lang lang-es" lang="es">Moment of a Sliding Vector About a Point</h3>
+            <h3 class="lang lang-en">Moment of a Sliding Vector about a Point</h3>
+            <h3 class="lang lang-es" lang="es">Momento de un Vector Deslizante respecto a un Punto</h3>
             <p class="lang lang-en">
                 The <strong>moment of a sliding vector</strong> `vecv` about a point P is calculated using the cross product of a position vector `vecr` and the vector `vecv`.
             </p>
             <p class="lang lang-es" lang="es">
-                The <strong>moment of a sliding vector</strong> `vecv` about a point P is calculated using the cross product of a position vector `vecr` and the vector `vecv`.
+                El <strong>momento de un vector deslizante</strong> `vecv` respecto a un punto P se calcula utilizando el producto vectorial de un vector de posición `vecr` por el vector `vecv`.
             </p>
             <p>&emsp; `vecM = vecr xx vecv`</p>
 
@@ -984,7 +984,7 @@
                 The position vector, `vecr`, extends from the point of interest P to the origin of `vecv`.
             </p>
             <p class="lang lang-es" lang="es">
-                The position vector, `vecr`, extends from the point of interest P to the origin of `vecv`.
+                El vector de posición, `vecr`, se extiende desde el punto de interés P hasta el origen de `vecv`.
             </p>
 
             <figure class="centered">
@@ -1074,7 +1074,7 @@
                 </svg > 
     
                 <figcaption class="lang lang-en"><b>Figure 1.8</b> Moment of a sliding vector `vecv` about point P, `vecM = vecr xx vecv`.</figcaption>
-                <figcaption class="lang lang-es" lang="es"><b>Figure 1.8</b> Moment of a sliding vector `vecv` about point P, `vecM = vecr xx vecv`.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura 1.8</b> Momento de un vector deslizante `vecv` respecto a un punto P, `vecM = vecr xx vecv`.</figcaption>
             </figure>
 
             <p class="lang lang-en">
