--- a/index.html
+++ b/index.html
@@ -860,6 +860,12 @@
             <p class="lang lang-es" lang="es">
                 El <strong>producto vectorial</strong> de dos vectores es una operación binaria sobre dos vectores en un espacio tridimensional y se escribe como <strong>`vecv xx vecw`</strong>. El resultado de este producto vectorial es un tercer vector perpendicular (u ortogonal) a los vectores que se multiplican o dicho de otra forma, normal al plano que los contiene.
             </p>
+			<p class="lang lang-en">
+                The direction of the cross product is determined by the right-hand rule. If you point your index finger in the direction of `vecv`, and your middle finger in the direction of `vecw`, your thumb points in the direction of `vecv xx vecw`.
+            </p>
+            <p class="lang lang-es" lang="es">
+                La dirección del producto vectorial está determinada por la regla de la mano derecha. Si apuntas con el dedo índice en la dirección de `vecv` y el dedo medio en la dirección de `vecw`, el pulgar apunta en la dirección de `vecv xx vecw`.
+            </p>
             <p class="lang lang-en">
                 If `vecv` and `vecw` are two vectors, and θ is the angle between them, the magnitude of their cross product is given by:  
             </p>
@@ -947,12 +953,7 @@
                 <figcaption class="lang lang-en"><b>Figure 1.7</b> `norm(vecv xx vecw)` as parallelogram area.</figcaption>
                 <figcaption class="lang lang-es" lang="es"><b>Figura 1.7</b> `norm(vecv xx vecw)` como area del paralelogramo.</figcaption>
             </figure>
-            <p class="lang lang-en">
-                The direction of the cross product is determined by the right-hand rule. If you point your index finger in the direction of `vecv`, and your middle finger in the direction of `vecw`, your thumb points in the direction of `vecv xx vecw`.
-            </p>
-            <p class="lang lang-es" lang="es">
-                La dirección del producto vectorial está determinada por la regla de la mano derecha. Si apuntas con el dedo índice en la dirección de `vecv` y el dedo medio en la dirección de `vecw`, el pulgar apunta en la dirección de `vecv xx vecw`.
-            </p>
+            
             <p class="lang lang-en">
                 In terms of its components, if `vecv = << x_1, y_1, z_1 >>` and `vecw = << x_2, y_2, z_2 >> `, the cross product `vecv xx vecw` is a vector defined as:
             </p>
@@ -967,6 +968,13 @@
                 Cada componente de este vector resultante es el determinante de una matriz de 2x2 formada eliminando la fila y la columna del componente correspondiente de una matriz de 3x3 que contiene los vectores unitarios `veci`, `vecj`, `veck` en la primera fila, los componentes de `vecv` en la segunda fila, y los componentes de `vecw` en la tercera fila.
             </p>
             <p> &emsp; `|[veci, vecj, veck], [x_1, y_1, z_1], [x_2, y_2, z_2]| = |[y_1, z_1], [y_2, z_2]|*veci - |[x_1, z_1], [x_2, z_2]|*vecj + |[x_1, y_1], [x_2, y_2]|*veck` </p>
+			<p class="lang lang-en">
+				Properties of the cross product:
+				<ul>
+					<li> Anticommutative property: 'vecu xx vecv = -vecv xx vecu`</li>
+					
+				</ul>
+			</p>
         </section>
 
         <section>
@@ -984,7 +992,7 @@
                 The position vector, `vecr`, extends from the point of interest P to the origin of `vecv`.
             </p>
             <p class="lang lang-es" lang="es">
-                El vector de posición, `vecr`, se extiende desde el punto de interés P hasta el origen de `vecv`.
+                Donde el vector de posición, `vecr`, se extiende desde el punto de interés P hasta el origen de `vecv`.
             </p>
 
             <figure class="centered">
