--- a/index.html
+++ b/index.html
@@ -970,8 +970,8 @@
             <p> &emsp; `|[veci, vecj, veck], [x_1, y_1, z_1], [x_2, y_2, z_2]| = |[y_1, z_1], [y_2, z_2]|*veci - |[x_1, z_1], [x_2, z_2]|*vecj + |[x_1, y_1], [x_2, y_2]|*veck` </p>
 			<p class="lang lang-en">
 				Properties of the cross product:
-				<ul>
-					<li> Anticommutative property: 'vecu xx vecv = -vecv xx vecu`</li>
+				<ul class="lang lang-en">
+					<li> Anticommutative property: `vecu xx vecv = -vecv xx vecu`</li>
 					
 				</ul>
 			</p>
