--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
 			<p class="lang lang-en">
 				Properties of the cross product:
 				<ul class="lang lang-en">
-					<li> Anticommutative property: `vecu xx vecv = -vecv xx vecu`</li>
+					<li> Anticommutative property: <br> &emsp; `vecu xx vecv = -vecv xx vecu`</li>
 					
 				</ul>
 			</p>
