--- a/index.html
+++ b/index.html
@@ -971,8 +971,10 @@
 			<p class="lang lang-en">
 				Properties of the cross product:
 				<ul class="lang lang-en">
-					<li> Anticommutative property: <br> &emsp; `vecu xx vecv = -vecv xx vecu`</li>
-					
+					<li>Anticommutative property: <br> &emsp; `vecu xx vecv = -vecv xx vecu`</li>
+					<li>Distributive property: <br> &emsp; `vecu xx (vecv + vecw) = vecu xx vecv + vecu xx vecW`</li>
+					<li>Multiplication by a constant: <br> &emsp; `c*(vecu xx vecv) = (c*vecu) xx vecv = vecu xx (c*vecv)`</li>
+					<li>Cross product of the zero vector: <br> &emsp; `vecu xx vec0 = vec0 xx vecu = vec0'</li>
 				</ul>
 			</p>
         </section>
