--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
 					<li>Anticommutative property: <br> &emsp; `vecu xx vecv = -vecv xx vecu`</li>
 					<li>Distributive property: <br> &emsp; `vecu xx (vecv + vecw) = vecu xx vecv + vecu xx vecW`</li>
 					<li>Multiplication by a constant: <br> &emsp; `c*(vecu xx vecv) = (c*vecu) xx vecv = vecu xx (c*vecv)`</li>
-					<li>Cross product of the zero vector: <br> &emsp; `vecu xx vec0 = vec0 xx vecu = vec0'</li>
+					<li>Cross product of the zero vector: <br> &emsp; `vecu xx vec0 = vec0 xx vecu = vec0`</li>
 					<li>Cross product of a vector with itself: <br> &emsp; `vecv xx vecv = vec0`</li>
 				</ul>
 			</p>
@@ -984,7 +984,7 @@
 					<li>Propiedad anticonmutativa: <br> &emsp; `vecu xx vecv = -vecv xx vecu`</li>
 					<li>Propiedad distributiva: <br> &emsp; `vecu xx (vecv + vecw) = vecu xx vecv + vecu xx vecW`</li>
 					<li>Multiplicación por un escalar: <br> &emsp; `c*(vecu xx vecv) = (c*vecu) xx vecv = vecu xx (c*vecv)`</li>
-					<li>Producto vectorial del vector cero: <br> &emsp; `vecu xx vec0 = vec0 xx vecu = vec0'</li>
+					<li>Producto vectorial del vector cero: <br> &emsp; `vecu xx vec0 = vec0 xx vecu = vec0`</li>
 					<li>Producto vectorial de un vector por sigo mismo: <br> &emsp; `vecv xx vecv = vec0`</li>
 				</ul>
 			</p>	
